--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mcomponents",
+  "name": "mr-design",
   "version": "0.1.0",
   "description": "A react-native components library",
   "source": "./src/index.tsx",
@@ -37,7 +37,9 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli lib",
     "prepare": "bob build",
-    "release": "release-it"
+    "release": "release-it",
+    "qlint": "eslint --fix \"**/*.{js,ts,tsx}\"",
+    "qprettier": "prettier --write \"**/*.{ts,tsx}\"" 
   },
   "keywords": [
     "react-native",
