--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "expo": "~51.0.22",
     "expo-status-bar": "~1.12.1",
+    "mr-design": "file:..",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
