--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "paths": {
-      "mcomponents": [
+      "mr-design": [
         "./src/index"
       ]
     },
